# grbl-esp32c6-soft

./: CMakeLists.txt
src/: driver.c  grbl_eeprom_extensions.c  grbl_eeprom_extensions.h  grbl_interface.c  main.c  mcu.c  mcu.h  planner_inject_accessors.c  serial.c  serial.h  simulator.c  simulator.h  validator.c  validator_driver.c
